--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -10,4 +10,7 @@ dependencies {
 
     //https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
+    
+    //Hamcrest
+    compile 'org.hamcrest:java-hamcrest:2.0.0.0'
 }
