--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -7,10 +7,12 @@ repositories {
 dependencies {
     testCompile 'org.testng:testng:6.8.21'
     compile("org.seleniumhq.selenium:selenium-java:3.141.59")
-
     //https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
-    
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'    
     //Hamcrest
     compile 'org.hamcrest:java-hamcrest:2.0.0.0'
+    //Jcommander
+    compile("com.beust:jcommander:1.72")
+    
+    
 }
