Лекция 6.6. Формат XML

--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -13,6 +13,8 @@ dependencies {
     compile 'org.hamcrest:java-hamcrest:2.0.0.0'
     //Jcommander
     compile("com.beust:jcommander:1.72")
+    //xstream
+    compile("com.thoughtworks.xstream:xstream:1.4.11.1")
     
     
 }
