--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -29,6 +29,9 @@ task testGroups(type:Test) {
     if (project.hasProperty('target')) {
         systemProperty 'target', "${target}"
     }
+    if (project.hasProperty('driver')){
+        systemProperty 'driver', "${driver}"
+    }
 }
 
 task testContacts(type:Test) {
@@ -40,5 +43,8 @@ task testContacts(type:Test) {
     }
     if (project.hasProperty('target')) {
         systemProperty 'target', "${target}"
+    }
+    if (project.hasProperty('driver')){
+        systemProperty 'driver', "${driver}"
     }
 }
