--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -38,6 +38,9 @@ task testGroups(type:Test) {
     if (project.hasProperty('driver')){
         systemProperty 'driver', "${driver}"
     }
+    if (project.hasProperty('verifyUI')){
+        systemProperty 'verifyUI', "${verifyUI}"
+    }
 }
 
 task testContacts(type:Test) {
@@ -52,5 +55,8 @@ task testContacts(type:Test) {
     }
     if (project.hasProperty('driver')){
         systemProperty 'driver', "${driver}"
+    }
+    if (project.hasProperty('verifyUI')){
+        systemProperty 'verifyUI', "${verifyUI}"
     }
 }
