--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -10,6 +10,9 @@ dependencies {
     //Hamcrest
     compile 'org.hamcrest:java-hamcrest:2.0.0.0'
     compile("org.apache.httpcomponents:httpclient-osgi:4.5.7")
+    compile("commons-net:commons-net:3.6")
+    compile("org.subethamail:subethasmtp:3.1.7")
+    compile("ru.lanwen.verbalregex:java-verbal-expressions:1.6")
 }
 
 test {
