--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -13,6 +13,8 @@ dependencies {
     compile("commons-net:commons-net:3.6")
     compile("org.subethamail:subethasmtp:3.1.7")
     compile("ru.lanwen.verbalregex:java-verbal-expressions:1.6")
+    compile("mysql:mysql-connector-java:8.0.15")
+    compile("org.hibernate:hibernate-core:5.4.1.Final")
 }
 
 test {
