Задание №19: Реализовать интеграцию тестов с баг-трекером MantisBT

--- a/mantis-tests/src/test/resources/local.properties
+++ b/mantis-tests/src/test/resources/local.properties
@@ -1,4 +1,5 @@
 web.baseUrl = http://localhost/mantisbt
+web.mantisUrl = http://localhost/mantisbt/api/soap/mantisconnect.php
 web.adminLogin = administrator
 web.adminPassword = root
 
