--- a/addressbook-web-tests/src/test/resources/remote.properties
+++ b/addressbook-web-tests/src/test/resources/remote.properties
@@ -1,4 +1,4 @@
 web.baseUrl = http://192.168.31.84/addressbook/
 web.adminLogin = admin
 web.adminPassword = secret
-selenium.server = http://192.168.31.84:4444/wd/hub/static/resource/hub.html
+selenium.server = http://192.168.31.84:4444/wd/hub
